Added Auth flags to .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,11 @@ DB_DATABASE=linky
 DB_USERNAME=root
 DB_PASSWORD=
 
+LINKY_AUTH_DISABLE_REGISTRATION=false
+LINKY_AUTH_DISABLE_FORGOT_PASSWORD=true
+LINKY_AUTH_DISABLE_EMAIL_VERIFICATION=false
+LINKY_AUTH_DISABLE_USER_PROFILE=false
+
 MAIL_MAILER=smtp
 MAIL_HOST=127.0.0.1
 MAIL_PORT=1025
